--- a/tensor-recoms.ipynb
+++ b/tensor-recoms.ipynb
@@ -1321,7 +1321,27 @@
     "# Scheme 2\n",
     "# MAP: 0.001053 NDCG: 0.003730 Precision@K: 0.002094 Recall@K: 0.005085\n",
     "# Scheme 3\n",
-    "# MAP: 0.014540 NDCG: 0.039085 Precision@K: 0.015089 Recall@K: 0.074484"
+    "# MAP: 0.014540 NDCG: 0.039085 Precision@K: 0.015089 Recall@K: 0.074484\n",
+    "\n",
+    "# Rank: 5\n",
+    "# 100%|██████████| 2870/2870 [12:54<00:00,  3.70it/s]\n",
+    "# Took 792.6423 seconds for prediction.\n",
+    "# Scheme 1\n",
+    "# MAP: 0.016481 NDCG: 0.042301 Precision@K: 0.016609 Recall@K: 0.078124\n",
+    "# Scheme 2\n",
+    "# MAP: 0.006623 NDCG: 0.014805 Precision@K: 0.005622 Recall@K: 0.021817\n",
+    "# Scheme 3\n",
+    "# MAP: 0.016614 NDCG: 0.042020 Precision@K: 0.016380 Recall@K: 0.076919\n",
+    "\n",
+    "# Rank: 10\n",
+    "# 100%|██████████| 2870/2870 [13:05<00:00,  3.65it/s]\n",
+    "# Took 812.5177 seconds for prediction.\n",
+    "# Scheme 1\n",
+    "# MAP: 0.014850 NDCG: 0.038955 Precision@K: 0.015835 Recall@K: 0.073156\n",
+    "# Scheme 2\n",
+    "# MAP: 0.008070 NDCG: 0.020113 Precision@K: 0.007889 Recall@K: 0.035013\n",
+    "# Scheme 3\n",
+    "# MAP: 0.014853 NDCG: 0.038978 Precision@K: 0.015835 Recall@K: 0.073306"
    ]
   },
   {
@@ -1621,7 +1641,17 @@
     "# Scheme 2\n",
     "# MAP: 0.002408 NDCG: 0.006820 Precision@K: 0.003213 Recall@K: 0.010340\n",
     "# Scheme 3\n",
-    "# MAP: 0.013209 NDCG: 0.034444 Precision@K: 0.013282 Recall@K: 0.064256"
+    "# MAP: 0.013209 NDCG: 0.034444 Precision@K: 0.013282 Recall@K: 0.064256\n",
+    "\n",
+    "# Rank: 5\n",
+    "# 100%|██████████| 2870/2870 [12:53<00:00,  3.71it/s]\n",
+    "# Took 785.0087 seconds for prediction.\n",
+    "# Scheme 1\n",
+    "# MAP: 0.017426 NDCG: 0.043782 Precision@K: 0.017040 Recall@K: 0.080533\n",
+    "# Scheme 2\n",
+    "# MAP: 0.010592 NDCG: 0.023435 Precision@K: 0.009352 Recall@K: 0.035719\n",
+    "# Scheme 3\n",
+    "# MAP: 0.015067 NDCG: 0.038145 Precision@K: 0.015032 Recall@K: 0.070296"
    ]
   },
   {
